--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.3",
-    "@fortawesome/fontawesome-free": "^6.6.0",
+    "@fortawesome/fontawesome-free": "^6.7.1",
     "@ng-bootstrap/ng-bootstrap": "^17.0.1",
     "apexcharts": "^3.54.1",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
+    "feather-icons": "^4.29.2",
     "hammerjs": "^2.0.8",
     "mousetrap": "^1.6.5",
     "ng-apexcharts": "^1.12.0",
